--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Maintainer: efkin <efkin@riseup.net>
 Build-Depends: debhelper, dh-python, python3
 
 Package: weatherapp
-Depends: python3, python3-gi, python3-requests
+Depends: python3, python3-gi, python3-requests, python3-matplotlib
 Version: 0.1.0
 Architecture: all
 Description: Weather App
